--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,10 @@
 \documentclass[12pt]{article}
  
 \usepackage[margin=1in]{}
-\usepackage{amsmath,amsthm,amssymb,graphicx,geometry,mathtools,tikz,hyperref,outlines}
+\usepackage{amsmath,amsthm,amssymb,graphicx,geometry,mathtools,tikz,hyperref,outlines,sectsty}
+
+\sectionfont{\fontsize{15}{18}\selectfont}
+\subsectionfont{\fontsize{12}{15}\selectfont}
 
 \usetikzlibrary{positioning}
 
@@ -29,6 +32,9 @@
 \def\Plus{\texttt{+}}
 \def\Minus{\texttt{-}}
 
+\hypersetup{
+    urlcolor=blue,
+}
 
 \newenvironment{theorem}[2][Theorem]{\begin{trivlist}
 \item[\hskip \labelsep {\bfseries #1}\hskip \labelsep {\bfseries #2.}]}{\end{trivlist}}
@@ -49,11 +55,11 @@
 \begin{document}
 
  
-\title{Math 221 Notes}
+\title{Calculus 1-2 Notes}
 \author{VOGEL, Max}
-\date{UW-Madison, Summer 2020}
+\date{UW-Madison Summer 2020, MATC Fall 2020}
 
-% https://tex.stackexchange.com/questions/186981/is-there-a-subsubsubsection-command
+% https://tex.stackexchange.com/questions/186981/is-there-a-subsection-command
 \setcounter{tocdepth}{4}
 \setcounter{secnumdepth}{4}
 
@@ -61,14 +67,12 @@
 \tableofcontents
 \newpage
 
-\section{Week 1}
-\subsection{Day 1}
-\subsubsection{Factoring:}
+\section{Factoring:}
 $$(a+b)(a^2-ab+b^2)=a^3+b^3 $$
 $$(a-b)(a^2+ab+b^2)=a^3-b^3 $$
 
 
-\subsubsection{Rules:}
+\section{Rules:}
 \begin{minipage}{0.45\textwidth}
 $$ a < b \rightarrow{} -a > -b $$
 $$ -ax < b \rightarrow{} x > -\frac{b}{a} $$
@@ -92,7 +96,7 @@ $$ \sqrt[n]{a} \sqrt[n]{b} = \sqrt[n]{ab}$$\\
 \end{tabular}
 \end{minipage}
 
-\subsubsection{Functions:}
+\section{Functions:}
 
 \textbf{Definition: }
 Assigns each element $x$ in a set $D$ exactly one element, called $f(x)$, in set $E$.\\
@@ -103,7 +107,7 @@ In terms of a graph, a curve can only be a function if no vertical lines interse
     \item If $f$ is a function with domain $D$, then it graph is the set of ordered pairs\\
     $ \{(x, f(x) | x) \text{ is a element of, } \in{}, D\}$
 \end{itemize}
-\paragraph{Finding domain:}
+\subsection{Finding domain:}
 \begin{enumerate}
     \item $f(x) = \sqrt{x+2}$
     $\rightarrow{} x + 2 \geq{} 0$
@@ -117,7 +121,7 @@ In terms of a graph, a curve can only be a function if no vertical lines interse
     $\rightarrow{} (-\infty, 0) \cup (0, 1) \cup (1, +\infty)$
 \end{enumerate}
 
-\paragraph{Picewise:}
+\subsection{Picewise:}
 \begin{itemize}
     \item Open circles, $\circ$, and circle brackets, ( ), are non-inclusive.
     \item Closed circles, $\bullet$, and square brackets, [ ], are inclusive.
@@ -128,7 +132,7 @@ In terms of a graph, a curve can only be a function if no vertical lines interse
             \end{cases}$
 \end{itemize}
 
-\paragraph{Types}
+\subsection{Types}
 \begin{itemize}
     \item[] \textbf{Even: }
     \item A function is even if $f(x) = f(-x)$
@@ -152,14 +156,14 @@ In terms of a graph, a curve can only be a function if no vertical lines interse
     \item[-] Odd times odd is always even.
 \end{itemize}
 
-\paragraph{Increasing \& Decreasing:}
+\subsection{Increasing \& Decreasing:}
 \begin{itemize}
 \item \textbf{Increasing :} A  function $f$ is called increasing on an interval if $f(x_1) < f(x_2)$ whenever $x_1 < x_2$. In other words, the slope must always be positive.
 \item \textbf{Decreasing :} A  function $f$ is called increasing on an interval if $f(x_1) > f(x_2)$ whenever $x_1 < x_2$. In other words, the slope must always be negative.
 \end{itemize}
 
 
-\subsubsection{Limits}
+\section{Limits}
 
 \textbf{Definition: } Supposing $f(x)$ is defined when $x$ is near the number $a$, we write $\lim_{x\to a} f(x) = L$ and say ``the limit of $f(x)$, as $x$ approaches $a$, equals $L$''.
 
@@ -177,7 +181,7 @@ In terms of a graph, a curve can only be a function if no vertical lines interse
     \item A vertical asymptote exists if the limit from left side is $+\infty$ or $-\infty$, and the limit from the right side is the opposite.
 \end{itemize}
 
-\paragraph{Infinite Limits}
+\subsection{Infinite Limits}
 \begin{itemize}
     \item If function limit is $\pm \infty$ (if the denominator is 0 at $f(a)$), you can find whether its $\Plus{}$ or $\Minus{}$ by solving the limit for each term. If the term is positive, then it's $+ \infty$, and vice-versa, e.g.
     
@@ -188,7 +192,7 @@ In terms of a graph, a curve can only be a function if no vertical lines interse
 
 \end{itemize}
 
-\subsubsection{Lines}
+\section{Lines}
 \begin{itemize}
     \item Slope-Point form: $y-b = m(x+a)$ -- $(a,b)$ will be a point of the equation.
     \item Slope-Intercept form: $y = mx + b$ -- $(0,b)$ will be the $y$-intercept.
@@ -198,8 +202,7 @@ In terms of a graph, a curve can only be a function if no vertical lines interse
     
 \end{itemize}
 
-\subsection{Day 2}
-\subsubsection{Limit Laws:}
+\section{Limit Laws:}
 Supposing $c$ is a constant and $\lim_{x \to a}f(x)$ and $\lim_{x \to a}g(x)$ exists, then\\
 \begin{minipage}{0.5\textwidth}
     $$\lim_{x \to a} [f(x) \pm g(x)] = \lim_{x \to a} f(x) \pm \lim_{x \to a} g(x)$$
@@ -228,7 +231,7 @@ $$\lim_{x \to a} \sqrt[n]{f(x)} = \sqrt[n]{f(a)} \text{ if } f(a) \geq 0 \text{ 
  $\lim_{x\to a} f(x) =  \lim_{x\to a} h(x) = L$, then $\lim_{x\to a} g(x) = L$
 
 
-\subsubsection{Piecewise / $(\epsilon, \delta)$ definition  of limit}
+\section{Piecewise / $(\epsilon, \delta)$ definition  of limit}
 If for every small number $\epsilon >  0$ there is a number $\delta > 0$ such that if $0 < |x-c| < \delta$ then $|f(x) - L| < \epsilon$.
 
 $$\includegraphics[width=0.5\textwidth]{media/limit01.png}$$
@@ -240,8 +243,7 @@ $$|x-2| < \frac{0.1}{4}\text{, therefore } \delta=\frac{0.1}{4}$$
 
 \noindent For non-linear equations, find the lesser and greater $\delta$, and choose the one that results in the smaller $\epsilon$.
 
-\subsection{Day 3}
-\subsubsection{Continuous Function:}
+\section{Continuous Function:}
 \textbf{Definition:} A function $f$ is continuous at  a number if $\lim_{x\to a} f(x) = f(a)$. Graphically, a function is continuous if you can draw it without having your pen leave paper. More formally, $f(x)$ is continuous at $x=a \iff:$ 
 
 \begin{enumerate}
@@ -262,28 +264,25 @@ $$f+g, f-g, cf, fg, \frac{f}{g} \text{ for } g(a) \neq{} 0$$
 
 $$\includegraphics[width=0.5\textwidth]{media/ivm.png}$$
 
-\subsection{Day 4}
-\subsubsection{Lines:}
-\paragraph{Secant Line:} A line that locally intersects two points on a curve.
+\section{Lines:}
+\subsection{Secant Line:} A line that locally intersects two points on a curve.
 
 $$\frac{\text{Rise}}{\text{Run}} = \frac{\Delta y}{\Delta x} = \frac{y_1 - y_0}{x_1 - x_0} =  \frac{f(a+h)-f(a)}{(a+h)-a}=\frac{f(a+h)-f(a)}{h}$$
 
 $$\includegraphics[width=0.65\textwidth]{media/secanteq.jpg}$$
 
-\paragraph{Tangent Line:} The line through a pair of infinitely close points on the curve so that the line is ``just touching''. Slope equation (also known as ``Difference Quotient''):
+\subsection{Tangent Line:} The line through a pair of infinitely close points on the curve so that the line is ``just touching''. Slope equation (also known as ``Difference Quotient''):
 
 $$\lim_{h \to 0} \left [ \frac{f(a+h)-f(a)}{h} \right ]$$
 
-\subsubsection{Derivatives:} The derivative of a function $f$ at a number $a$, denoted by $f'(a)$, is 
+\section{Derivatives:} The derivative of a function $f$ at a number $a$, denoted by $f'(a)$, is 
 
 $$f'(a) = \lim_{h \to 0} \left [ \frac{f(a+h)-f(a)}{h} \right ]$$
 and the equation of the tangent line to the curve $y=f(x)$ at the point $(a,f(a))$ can be written in point-slope form as
 
 $$y-f(a)=f'(a)(x-a)$$
 
-\section{Week 2}
-\subsection{Day 5}
-\subsubsection{Derivatives (cont.):}
+\section{Derivatives (cont.):}
 \begin{itemize}
     \item Other notation is $\frac{d y}{d x} |_{x=a}$ (Leibniz Notation),  $\frac{d f}{d x}$, $\frac{d}{d x}$ $f(x)$, $f(x)$, $D f(x)$, \& $D_{x} f(x)$
     \item Function $f(x)$ is differentiable at $x=a$ if $f'(a)$ exists (same as Theorem 1.5.1).
@@ -294,8 +293,7 @@ $$y-f(a)=f'(a)(x-a)$$
 \end{itemize}
 
 
-\subsection{Day 6}
-\subsubsection{Derivatives Rules:}
+\section{Derivatives Rules:}
 
 \begin{minipage}{0.5\textwidth}
 
@@ -321,7 +319,7 @@ $$y-f(a)=f'(a)(x-a)$$
     \item Quotient Rule: $\frac{d}{d x}\left[ \frac{f(x)}{g(x)} \right] = \frac{g\cdot f'- f\cdot g'}{g^2} = \frac{\text{lo} \cdot \text{d hi - hi} \cdot \text{d lo}}{\text{lo}\cdot\text{lo}}$
 \end{itemize}
 
-\subsubsection{Lines:}
+\section{Lines:}
 \textbf{Theorem:} If the graph of $y=m_1x+b_1$ is perpendicular to the graph of $y=m_2x+b_2$, then $m_1m_2 = -1$. 
 \\
 \textbf{Normal Line:} The normal line to a curve at point $M$ is the line through $M$ that is perpendicular to the tangent line at $M$.
@@ -329,14 +327,13 @@ $$y-f(a)=f'(a)(x-a)$$
 $$\includegraphics[width=0.5\textwidth]{media/normal-tangent.png}$$
 
 
-\subsection{Day 7}
-\subsubsection{Trig Review:}
-$$\csc = \frac{1}{\sin}, \ \sec = \frac{1}{\cos}, \ \cot = \frac{1}{\tan} = \frac{\cos}{\sin}$$
-\subsubsection{Trig Identities:}
+\section{Trig Review:}
+$$\csc = \frac{1}{\sin}, ~\sec = \frac{1}{\cos}, ~\cot = \frac{1}{\tan} = \frac{\cos}{\sin}$$
+\section{Trig Identities:}
 $$\sin^2 + \cos^2 = 1$$
 $$\text{Dividing by }\sin^2: 1 + \frac{\cos^2}{\sin^2} = \frac{1}{\sin^2} \rightarrow{} 1 + \cot^2 = \csc^2$$
 $$\text{Dividing by }\cos^2: \frac{\sin^2}{\cos^2} + 1 = \frac{1}{\cos^2} \rightarrow{} \tan^2 + 1 = \sec^2$$
-\subsubsection{Derivative of Trig Functions:}
+\section{Derivative of Trig Functions:}
 \begin{minipage}{0.5\textwidth}
     
     $$(\sin)' = \cos$$
@@ -354,17 +351,15 @@ $$\text{Dividing by }\cos^2: \frac{\sin^2}{\cos^2} + 1 = \frac{1}{\cos^2} \right
 \end{tabular}
 \end{minipage}
 
-\subsubsection{Limit of Trig Functions:}
+\section{Limit of Trig Functions:}
 
 $$\lim_{\theta \to 0}{\frac{\sin \theta}{\theta}} = 1$$
 
-\section{Week 3}
-\subsection{Day 9}
-\subsubsection{Composite Function: } A new function can be  composed to two old functions, such as $f \circ g$. Formally, given two functions $f$ and $g$, the composite function $f \circ g$ and $g \circ f$ (also called the composition of $f$ and $g$) is defined by $(f \circ g)(x)  = f(g(x))$ and $(g \circ f)(x)  = g(f(x))$
+\section{Composite Function: } A new function can be  composed to two old functions, such as $f \circ g$. Formally, given two functions $f$ and $g$, the composite function $f \circ g$ and $g \circ f$ (also called the composition of $f$ and $g$) is defined by $(f \circ g)(x)  = f(g(x))$ and $(g \circ f)(x)  = g(f(x))$
 
-\subsubsection{Decomposite Function: } Many functions can be decomposed into small functions, $h(x) = f(g(x))$
+\section{Decomposite Function: } Many functions can be decomposed into small functions, $h(x) = f(g(x))$
 
-\subsubsection{Chain Rule} If the composite function $F(x) = f \cdot g$ is defined by $F(x) = f(g(x))$ is differentiable at $x$ and $F'$ is given by the product 
+\section{Chain Rule} If the composite function $F(x) = f \cdot g$ is defined by $F(x) = f(g(x))$ is differentiable at $x$ and $F'$ is given by the product 
 
 $$F'(x) = f'(g(x)) \cdot g'(x) \text{ or } OUT'(in) \cdot IN'$$
 
@@ -373,17 +368,15 @@ $$F'(x) = f'(g(x)) \cdot g'(x) \text{ or } OUT'(in) \cdot IN'$$
 $$\frac{d}{dx}[g(x)]^n = n[g(x)]^{n-1} \cdot g'(x)$$
 
 
-\subsection{Day 10}
 
-\subsubsection{Explicit and Implicit:}
+\section{Explicit and Implicit:}
 \textbf{Explicit: } A function given in terms of the independent variable, e.g. $y=\sqrt{x^3+1}$.\\
-\textbf{Implicit: } A function given in terms of both dependent and independent variables, e.g. $x^3-y^2+1=0,\ y \geq 0$.\\
+\textbf{Implicit: } A function given in terms of both dependent and independent variables, e.g. $x^3-y^2+1=0,~y \geq 0$.\\
 \textbf{Implicit Differentiation: } If the function is stuck in implicit form, then differentiate both sides of the equation with respect to $x$ and solve the resulting equation for $y'$.\\
 \textbf{Note: }
-$$\frac{d}{dx}(y^n) \neq{} ny^{n-1}  \ \ \ \ \ \ \frac{d}{dx}(y^n) = ny^{n-1} \cdot y'$$
+$$\frac{d}{dx}(y^n) \neq{} ny^{n-1}  ~~~~~~\frac{d}{dx}(y^n) = ny^{n-1} \cdot y'$$
 
-\subsection{Day 11}
-\subsubsection{Related Rates:}
+\section{Related Rates:}
 A related rates problem is to compute the rate of change (derivative) of one quantity in terms of the rate of change of another quantity, which is more easily measured.
 \\\\
 \noindent How to approach a related rates problem:
@@ -396,26 +389,25 @@ A related rates problem is to compute the rate of change (derivative) of one qua
     rate.
 \end{enumerate}
 
-\subsection{Day 12}
-\subsubsection{Maximum and Minimum Values:}
+\section{Maximum and Minimum Values:}
 \textbf{Absolute or Global [Max/Min]: } The [max/min] $y$-value in the domain. \\
 \textbf{Relative or Local [Max/Min]: } The [max/min] $y$-value in a given range around a $x$-value. Can only occur when the graph goes from [increasing to decreasing / vice-versa]\\
 \textbf{Note: } The endpoint of a graph can never be a relative [max/min] because one side of the point is always undefined. 
 
-\subsubsection{Increasing/Decreasing Functions:}
+\section{Increasing/Decreasing Functions:}
 $$\includegraphics[scale=.75]{media/increasing-decreasing-functions.png}$$
 
 
-\subsubsection{Concavity:}
+\section{Concavity:}
 $$\includegraphics[scale=.75]{media/concavity.png}$$
 
-\subsubsection{Extreme Value Theorem:} Suppose that $f(x)$ is continuous on the interval $[a,b]$ then there are two numbers, $a \leq c, d \leq d$ so that $f(c)$ is an absolute maximum for the function and $f(d)$ is an absolute minimum for the function.
+\section{Extreme Value Theorem:} Suppose that $f(x)$ is continuous on the interval $[a,b]$ then there are two numbers, $a \leq c, d \leq d$ so that $f(c)$ is an absolute maximum for the function and $f(d)$ is an absolute minimum for the function.
 
-\subsubsection{Fermat's Theorem:} If $f$ has a local max or min at $a$, and $f'(a)$ exists, then $f'(a) = 0$.
+\section{Fermat's Theorem:} If $f$ has a local max or min at $a$, and $f'(a)$ exists, then $f'(a) = 0$.
 
-\subsubsection{Critical Number: } A critical number of a function $f$ is a number $c$ in the domain of $f$ such that either $f'(c) = 0$ or $f'(c) = $ DNE
+\section{Critical Number: } A critical number of a function $f$ is a number $c$ in the domain of $f$ such that either $f'(c) = 0$ or $f'(c) = $ DNE
 
-\subsubsection{Absolute Extreme: } To find the absolute max and min values of a continuous function $f$ on a closed interval $[a,b]$: 
+\section{Absolute Extreme: } To find the absolute max and min values of a continuous function $f$ on a closed interval $[a,b]$: 
 
 \begin{enumerate}
     \item Find the critical numbers of the function on $(a,b)$
@@ -425,9 +417,7 @@ $$\includegraphics[scale=.75]{media/concavity.png}$$
     
 \end{enumerate}
 
-\section{Week 3}
-\subsection{Day 13}
-\subsubsection{Rolle's Theorem} Let $f$ be a function that satisfies the following three hypotheses:
+\section{Rolle's Theorem} Let $f$ be a function that satisfies the following three hypotheses:
 \begin{enumerate}
     \item $f$ is continuous on the closed interval $[a,b]$
     \item $f$ is differentiable on the open interval $(a,b)$
@@ -437,14 +427,14 @@ Then there is at least one number $c$ in $(a,b)$ such that $f'(c) = 0$
 
 $$\includegraphics[width=0.7\textwidth]{media/rolles.png}$$
 
-\paragraph{Proof}
+\subsection{Proof}
 \begin{itemize}
     \item Case 1: $f(x) = k, $ a constant. Then, $f'(x) = 0$ so the number $c$ can be taken to be any number in $(a,b)$.
     \item Case 2: $f(x) > f(a), $ concave down, for some $x$ in $(a,b)$. By the extreme value theorem, $f$ has a max value in $[a,b]$. Since $f(a)=f(b)$, it must attain it's max value at $c$; $c \in (a,b)$. Then, $f$ has a local max at $c$, $f$ is differentiable at $c$, therefore $f'(c)$ = 0 by Fermat's theorem. 
     \item Case 3: $f(x) < f(a), $ concave up, for some $x$ in $(a,b)$. By the extreme value theorem, $f$ has a min value in $[a,b]$. Since $f(a)=f(b)$, it must attain it's min value at $c$; $c \in (a,b)$. Then, $f$ has a local min at $c$, $f$ is differentiable at $c$, therefore $f'(c)$ = 0 by Fermat's theorem. 
 \end{itemize}
 
-\subsubsection{Mean Value Theorem} Let $f$ be a function that satisfies the following hypotheses: 
+\section{Mean Value Theorem} Let $f$ be a function that satisfies the following hypotheses: 
 
 \begin{itemize}
     \item $f$ is continuous on the closed interval $[a,b]$
@@ -457,8 +447,7 @@ $$f(b) - f(a) = f'(c)(b-a)$$
 
 $$\includegraphics[width=0.7\textwidth]{media/mvt.png}$$
 
-\subsection{Day 14}
-\subsubsection{Determining Increasing/Decreasing: }
+\section{Determining Increasing/Decreasing: }
 \begin{enumerate}
     \item Find the critical numbers
     \item Mark the critical numbers on a real line
@@ -467,7 +456,7 @@ $$\includegraphics[width=0.7\textwidth]{media/mvt.png}$$
     \item[$\cdot$] If $f'(c) < 0$, $f$ is decreasing at that interval
 \end{enumerate}
 
-\subsubsection{Local max and min: }
+\section{Local max and min: }
 \begin{enumerate}
     \item Find the critical numbers
     \item Mark the critical numbers on a real line
@@ -478,13 +467,13 @@ $$\includegraphics[width=0.7\textwidth]{media/mvt.png}$$
     \item[$\cdot$] If $f'$ doesn't change sign, then $f$ has no local min or min at $f(c)$
 \end{enumerate}
 
-\subsubsection{Second Derivative Test} Suppose $f''$ is continuous near $c$. 
+\section{Second Derivative Test} Suppose $f''$ is continuous near $c$. 
 \begin{enumerate}
     \item If $f'(c) = 0$ and $f''(c) < 0$, then $f$ has a local max at $c$.
     \item If $f'(c) = 0$ and $f''(c) > 0$, then $f$ has a local min at $c$.
     \item If $f'(c) = 0$ and $f''(c) = 0$, then the second derivative test says nothing about the point $c$, a possible inflection point
 \end{enumerate}
-\subsubsection{Finding Concavity}
+\section{Finding Concavity}
 \begin{enumerate}
     \item $f(x)$ increasing implies $f'(x)>0$
     \item $f'(x)$ increasing implies $f''(x)>0$
@@ -492,23 +481,20 @@ $$\includegraphics[width=0.7\textwidth]{media/mvt.png}$$
     \item $f''(x)<0$ for all $x$ in $I$, then the graph of $f$ is concave downwards on $I$
 \end{enumerate}
 
-\paragraph{Inflection Point:} A point $p$ on a curve $f(x)$ is called an inflection point if $f$ is continuous there and the curve changes at $p$ from concave up to concave down or vice versa.
+\subsection{Inflection Point:} A point $p$ on a curve $f(x)$ is called an inflection point if $f$ is continuous there and the curve changes at $p$ from concave up to concave down or vice versa.
 
-\paragraph{Theorem:} At a point of inflection, $(c, f(c))$, either $f''(c)=0$ or $f''(c)$ DNE.
+\subsection{Theorem:} At a point of inflection, $(c, f(c))$, either $f''(c)=0$ or $f''(c)$ DNE.
 
-\subsection{Day 15}
-\subsubsection{Limit at $\infty{}$} Let $f$ be a function defined on some interval $(a, +\infty{})$. Then $\lim_{x \to \infty{}} f(x) = L$ means that the value of $f(x)$ can be made arbitrarily close to $L$ by making $x$ sufficiently large. In other words, for every $\epsilon > 0$, there is a number $N$ such that if $x<N$ then $|f(x)-L| < \epsilon$. "$N$": Large negative number.
+\section{Limit at $\infty{}$} Let $f$ be a function defined on some interval $(a, +\infty{})$. Then $\lim_{x \to \infty{}} f(x) = L$ means that the value of $f(x)$ can be made arbitrarily close to $L$ by making $x$ sufficiently large. In other words, for every $\epsilon > 0$, there is a number $N$ such that if $x<N$ then $|f(x)-L| < \epsilon$. "$N$": Large negative number.
 
-\subsubsection{Horizontal Asymptote} The line $y=L$ is called a  horizontal asymptote of the curve $y=f(x)$ if either $\lim_{x \to +\infty{}} f(x) = L$ or $\lim_{x \to -\infty{}} f(x) = L$
+\section{Horizontal Asymptote} The line $y=L$ is called a  horizontal asymptote of the curve $y=f(x)$ if either $\lim_{x \to +\infty{}} f(x) = L$ or $\lim_{x \to -\infty{}} f(x) = L$
 
-\paragraph{Theorem} If $r>0$ is a rational number, then $\lim_{x \to \infty{}} \frac{1}{x^r} = 0$\\
+\subsection{Theorem} If $r>0$ is a rational number, then $\lim_{x \to \infty{}} \frac{1}{x^r} = 0$\\
 If $r>0$ is a rational number such that $x^r$ is defined for all $x$, then $\lim_{x \to -\infty{}} \frac{1}{x^r} = 0$
 
 
-\section{Week 5}
 
-\subsection{Day 17} 
-\subsubsection{Optimization} 
+\section{Optimization} 
 \begin{enumerate}
     \item Understand the problem. What is the unknown? What are the given quantities? What are the given conditions?
     \item Draw a diagram.  Show variables.
@@ -519,19 +505,18 @@ If $r>0$ is a rational number such that $x^r$ is defined for all $x$, then $\lim
 \end{enumerate}
 
 
-\subsection{Day 18}
-\subsubsection{Area Under Curve: } The area $A$ of the region $S$ that lies under the graph of the continuous function $f$ is the limit of the sum of the areas of approximating rectangles:
+\section{Area Under Curve: } The area $A$ of the region $S$ that lies under the graph of the continuous function $f$ is the limit of the sum of the areas of approximating rectangles:
 
 $$A=\lim_{n\to \infty} R_n = \lim_{n\to \infty} (f(x_1)\Delta x) + f(x_2)\Delta x) + ... + f(x_n)\Delta x) = \lim_{n\to \infty} \sum_{i=1}^{n} f(x_i)\Delta x$$
 $$A=\lim_{n\to \infty} r_n = \lim_{n\to \infty} (f(x_0)\Delta x) + f(x_1)\Delta x) + ... + f(x_{n-1})\Delta x)= \lim_{n\to \infty} \sum_{i=1}^{n} f(x_{i-1})\Delta x$$
 
-\subsubsection{Absolute Extreme Values} Suppose that $c$ is a critical number of a continuous function $f$ defined on an interval. 
+\section{Absolute Extreme Values} Suppose that $c$ is a critical number of a continuous function $f$ defined on an interval. 
 \begin{itemize}
     \item If $f'(x)>0$ for all $x<c$, and $f'(x)<0$ for all $x>c$, then $f(c)$ is the absolute max for values of $f$.
     \item If $f'(x)<0$ for all $x<c$, and $f'(x)>0$ for all $x>c$, then $f(c)$ is the absolute min for values of $f$.
 \end{itemize}
 
-\subsubsection{Anti-derivative}
+\section{Anti-derivative}
 A function $F$ is called an antiderivative of $f$ on an interval $I$ if $F'(x) = f(x)$ for all $x$ in $I$.
 
 \noindent For example, $F(x)=x^3$ and $f(x) = 3x^2$:
@@ -540,27 +525,26 @@ A function $F$ is called an antiderivative of $f$ on an interval $I$ if $F'(x) =
     \item $F(x)$ is antiderivative of function $f(x)$
 \end{itemize}
 
-\paragraph{Theorem} If $F$ is an antiderivative of $f$ on an interval $I$, then the most general antiderivative of $f$ on $I$ is $F(x)+C$ where $C$ is an arbitrary constant.
+\subsection{Theorem} If $F$ is an antiderivative of $f$ on an interval $I$, then the most general antiderivative of $f$ on $I$ is $F(x)+C$ where $C$ is an arbitrary constant.
 
-\paragraph{Initial Condition Steps}
+\subsection{Initial Condition Steps}
 \begin{enumerate}
     \item Find the anti-derivative of $f(x)$
     \item Plug in the initial  condition to evaluate constant $C$
     \item Find the solution
 \end{enumerate}
 
-\subsubsection{Differential Equations} An equation that involves the derivatives of a function is called a differential equation.\\
+\section{Differential Equations} An equation that involves the derivatives of a function is called a differential equation.\\
 The solution of a differential equation is a function that satisfies the equation. 
 
-\subsection{Day 19}
 
-\subsubsection{Definite Integral} 
+\section{Definite Integral} 
 
 If $f$ is continuous on $[a,b]$, or if $f$ has only a finite number of jump discontinuities, then $f$ is integrable on $[a,b]$; that is, the definite integral exists.
 $$\int_a^b f(x) dx=\lim_{n\to \infty} \sum_{i=1}^{n} f(x_i^*)\Delta x$$
 
 
-\paragraph{Properties}
+\subsection{Properties}
 
 $$\int_a^a f(x) dx = 0$$
 $$\int_a^b f(x) dx = -\int_b^a f(x) dx$$
@@ -568,51 +552,46 @@ $$\int_a^b c \cdot dx = c(b-a)$$
 $$\int_a^b \left[f(x) \pm g(x)\right] dx = \int_a^b f(x) dx \pm \int_a^b g(x) dx$$
 $$\int_a^c f(x) dx = \int_a^b f(x) dx + \int_b^c f(x) dx \text{ where } a < b < c$$
 
-\paragraph{Comparison Properties}
+\subsection{Comparison Properties}
 
 $$f(x)>0 \text{ for } a < x < b, \text{ then } \int_a^b f(x)dx > 0$$ 
 $$f(x)>g(x) \text{ for } a < x < b, \text{ then } \int_a^b f(x)dx > \int_a^b g(x)dx$$ 
 $$m<f(x)<M \text{ for } a < x < b, \text{ then } m(b-a) < \int_a^b f(x)dx < M(b-a)$$ 
 
-\subsection{Day 20}
 
-\subsubsection{Fundamental Theorem of Calculus (1)} 
+\section{Fundamental Theorem of Calculus (1)} 
 If $f(x)$ is continuous on $[a,b]$, then the function $g$ defined by  $g(x) = \int_a^x f(t) dt$ for $a \leq x \leq b$, is continuous on $[a,b]$ and differentiable on $(a,b)$, and $g'(x)$=$f(x)$. In other words, 
 $$\frac{d}{dx} \left[\int_a^x f(t)dt \right] = f(x)$$
 
-\subsubsection{Fundamental Theorem of Calculus (2)} 
+\section{Fundamental Theorem of Calculus (2)} 
 If $f(x)$ is continuous on $[a,b]$, then $\int_a^b f(x)dx = F(b)-F(a)$. where   $F(x)$ is any antiderivative of $f$, that is, a function such that $F'=f$.
 
-\paragraph{Notation:} 
+\subsection{Notation:} 
 $$F(b)-F(a) = F(x)\big|_a^b = F(x)\big]_a^b$$
 
-\subsubsection{Properties of Definite Integral}
+\section{Properties of Definite Integral}
 $$\int_{-a}^a f(x)dx = 0\text{ if } f(x) \text{ is odd}$$
 $$\int_{-a}^a f(x)dx = 2\cdot\int_{0}^a f(x)dx \text{ if } f(x) \text{ is even}$$
 
 
-\section{Week 6}
 
-\subsection{Day 21}
 
-\subsubsection{Indefinite Integral} If $F(x)$ is any anti-derivative of $f(x)$, then the most general anti-derivative of $f(x)$ is called an indefinite integral and denoted as 
+\section{Indefinite Integral} If $F(x)$ is any anti-derivative of $f(x)$, then the most general anti-derivative of $f(x)$ is called an indefinite integral and denoted as 
 
 $$\int f(x)dx = F(x) + C$$
 
-\paragraph{Indefinite vs Definite Integrals} Definite is a number, where as indefinite is a family of functions
+\subsection{Indefinite vs Definite Integrals} Definite is a number, where as indefinite is a family of functions
 
-\subsubsection{Integral Rules}
+\section{Integral Rules}
 $$\includegraphics[width=0.85\textwidth]{media/indef-integrals.JPG}$$
 
 
 
-\subsubsection{Net Change Theorem} The integral of a rate of change is the net change, $\int_a^b F'(x)dx = F(b)-F(a)$
+\section{Net Change Theorem} The integral of a rate of change is the net change, $\int_a^b F'(x)dx = F(b)-F(a)$
 
 
 
-\subsection{Day 22}
-
-\subsubsection{Integration by Substitution}  A function $F$ is called an anti-derivative of $f$ on an interval $I$ if $F’(x)=f(x)$ for all $x$ in $I$.
+\section{Integration by Substitution}  A function $F$ is called an anti-derivative of $f$ on an interval $I$ if $F’(x)=f(x)$ for all $x$ in $I$.
 
 \begin{enumerate}
     \item Let $u=g(x)$, where $g(x)$ is part of the integrand.
@@ -622,29 +601,28 @@ $$\includegraphics[width=0.85\textwidth]{media/indef-integrals.JPG}$$
     \item If definite, plug in the lower limit of the integral and the upper limit of the integral into the expression $u=g(x)$ and get the new lower and upper limits. Then, evaluate the new definite integral (involving only $u$) by finding the anti-derivative of $f$ and use the Fundamental Theorem.
 \end{enumerate}
 
-\subsubsection{Substitution Rule for Definite Integral}
+\section{Substitution Rule for Definite Integral}
 If $g'$ is continuous on $[a,b]$ and $f$ is continuous on the range of $u=g(x)$, then
 
 $$\int_a^b f(g(x)) \cdot g'(x) dx = \int_{g(a)}^{g(b)} f(u) du$$
 
 
-\subsection{Day 23}
 
-\subsubsection{One-to-One Function} A function $f$ that never takes one a same value twice; that is $f(x_1)\neq f(x_2)$ whenever $x_1\neq x_2$. 
+\section{One-to-One Function} A function $f$ that never takes one a same value twice; that is $f(x_1)\neq f(x_2)$ whenever $x_1\neq x_2$. 
 
 $$\includegraphics[width=0.65\textwidth]{media/onetoone.JPG}$$
 
-\paragraph{Horizontal Line Test} If you draw a horizontal line through the graph, it should only intersect once if it's a 1-to-1 function.
+\subsection{Horizontal Line Test} If you draw a horizontal line through the graph, it should only intersect once if it's a 1-to-1 function.
 
-\paragraph{Remark} All strictly increasing/decreasing functions are 1-to-1
+\subsection{Remark} All strictly increasing/decreasing functions are 1-to-1
 \begin{itemize}
     \item $f'(a) > 0$ means strictly increasing
     \item $f'(a) < 0$ means strictly decreasing
 \end{itemize}
 
-\subsubsection{Inverse Function} Let function $f$ be a 1-to-1 function with domain $A$ and range $B$. Then its inverse function $f^{-1}$ has domain $B$ and range $A$ and is defined by $f^{-1}(y)=x \iff f(x)=y$ for any $y$ in $B$.
+\section{Inverse Function} Let function $f$ be a 1-to-1 function with domain $A$ and range $B$. Then its inverse function $f^{-1}$ has domain $B$ and range $A$ and is defined by $f^{-1}(y)=x \iff f(x)=y$ for any $y$ in $B$.
 
-\paragraph{Remark} 
+\subsection{Remark} 
 \begin{itemize}
     \item The domain of $f^{-1}$ is range of $f$
     \item The range of $f^{-1}$ is the domain of $f$
@@ -653,14 +631,14 @@ $$\includegraphics[width=0.65\textwidth]{media/onetoone.JPG}$$
 \end{itemize}
 
 
-\paragraph{Steps to find inverse}
+\subsection{Steps to find inverse}
 \begin{enumerate}
     \item Write $y=f(x)$
     \item Solve this equation for $x$ in terms of $y$
     \item To express $f^{-1}$ as a function of $x$, interchange $x$ and $y$.
 \end{enumerate}
 
-\subsubsection{Derivative of Inverse Function}\label{Derivative of Inverse Function}
+\section{Derivative of Inverse Function}\label{Derivative of Inverse Function}
 If $f$ is a 1-to-1 differentiable function with inverse function $f^{-1}$, then the inverse function is differentiable and the following is true: 
 
 $$(f^{-1})'(x) = \frac{1}{f'(f^{-1}(x))}$$
@@ -668,25 +646,20 @@ $$(f^{-1})'(x) = \frac{1}{f'(f^{-1}(x))}$$
 
 
 
-\section{Week 7}
-
-\subsection{Day 25}
-
-\subsubsection{Exponential Functions}
+\section{Exponential Functions}
 A function $f$ is  exponential if it is in the form $f(x)=a^x, a>0, a\neq 1$. 
 \begin{itemize}
     \item If $a>1$, the range is $(0, \infty)$ and greater the $a$, greater the slope
     \item If $1>a>0$, the range is $(\infty, 0)$ and lower the $a$, greater the slope
 \end{itemize}
 
-\paragraph{Derivative of Exponential Function}
+\subsection{Derivative of Exponential Function}
 $$a^x \cdot \lim_{h\to0} \frac{a^h-1}{h} = a^x \cdot f'(0)$$
 
-\subsubsection{$e$}
+\section{$e$}
 The function $f(x)=e^x$ is called the natural exponential function because the derivative is itself.
 
-\subsection{Day 26}
-\subsubsection{Log Functions:} Exponential functions are 1-to-1, hence it has an inverse function $f^{-1}$:
+\section{Log Functions:} Exponential functions are 1-to-1, hence it has an inverse function $f^{-1}$:
 
 $$f^{-1} (x) = log_a x, x>0$$
 $$y=log_a x \iff a^y = x$$
@@ -700,22 +673,20 @@ $$log_a(x^r)=r\cdot log_a x$$
 $$lim_{x\to \infty} [log_a x] = \infty$$
 $$lim_{x\to 0^+} [log_a x] = -\infty, a > 1$$
 
-\subsubsection{Inverse Function Rules:}
+\section{Inverse Function Rules:}
 
 $$(f \circ f^{-1})(x) = a^{log_a x} = x, x>0$$
 $$(f^{-1} \circ f)(x) = log_a (a^x) = x$$
 
-\subsubsection{Theorem} If $f$ is a 1-to-1 differentiable function with the inverse function $f^{-1}$, then the inverse function is differentiable and we can use \ref{Derivative of Inverse Function}: 
+\section{Theorem} If $f$ is a 1-to-1 differentiable function with the inverse function $f^{-1}$, then the inverse function is differentiable and we can use \ref{Derivative of Inverse Function}: 
 
 $$(f^{-1})'(x) = \frac{1}{f'(f^{-1}(x))}$$
 
-\subsection{Day 27}
 $$\frac{d}{dx} \left( \sin^{-1} x \right) = \frac{1}{\sqrt{1-x^2}}, (-1 < x < 1) \text{ between } -\frac{\pi}{2} \leq y \leq \frac{\pi}{2}$$
 $$\frac{d}{dx} \left( \cos^{-1} x \right) = -\frac{1}{\sqrt{1-x^2}}, (-1 < x < 1)  \text{ between } 0 \leq y \leq \pi$$
 $$\frac{d}{dx} \left( \tan^{-1} x \right) = \frac{1}{1+x^2}, x \in {\mathbb{} R}\text{ between } -\frac{\pi}{2} \leq y \leq \frac{\pi}{2}$$
 
-\subsection{Day 28}
-\subsubsection{Indeterminate Forms:}
+\section{Indeterminate Forms:}
 
 \begin{minipage}{0.45\textwidth}
 
@@ -734,7 +705,7 @@ $$\infty^0$$
 \end{tabular}
 \end{minipage}
 
-\subsubsection{L'Hospital's Rule:} Suppose $f$ and $g$ are differentiable and $g'(x) \neq{} 0$ on an open interval $I$ that contains $a$ (except possibly at $a$). Suppose that 
+\section{L'Hospital's Rule:} Suppose $f$ and $g$ are differentiable and $g'(x) \neq{} 0$ on an open interval $I$ that contains $a$ (except possibly at $a$). Suppose that 
 
 $$\lim_{x\to a} f(x)  = 0  \text{ and  } \lim_{x \to a} g(x) = 0$$
 $$\text{or that } \lim_{x\to a} f(x)  = \pm \infty  \text{ and  } \lim_{x \to a} g(x) = \infty$$
@@ -747,44 +718,107 @@ $$\lim_{x\to a} \frac{f(x)}{g(x)} = \lim_{x\to a} \frac{f'(x)}{g'(x)}$$
 
 
 
-\section{Week 8}
-\subsection{Day 29}
-\subsubsection{Area Between Lines} The area $A$ of the region bounded by the curves $y=f(x),\ y = g(x),$ and the lines $x=a, x=b$, where $f$ and $g$ are continuous and $f(x)>g(x)$ for  all $x$ in $[a,b]$ is 
+\section{Area Between Lines} The area $A$ of the region bounded by the curves $y=f(x),~y = g(x),$ and the lines $x=a, x=b$, where $f$ and $g$ are continuous and $f(x)>g(x)$ for  all $x$ in $[a,b]$ is 
 $$A = \int_a^b \left[ f(x) - g(x) \right] dx$$
 
 \noindent Or, if we just want to find the area inclsed we can use 
 $$A = \int_a^b \left| f(x) - g(x) \right| dx$$
 
 
-\subsubsection{Average value of $f$}
+\section{Average value of $f$}
 We define the average value of $f$ on the interval $[a,b]$ as 
 $$f_{avg}= \frac{1}{b-a} \cdot \int_a^b f(x) dx$$
 
-\subsubsection{Mean Value Theorem for Integrals} If $f$ is continuous on $[a,b]$, then there exists a number $c$ in $[a,b]$ such that 
+\section{Mean Value Theorem for Integrals} If $f$ is continuous on $[a,b]$, then there exists a number $c$ in $[a,b]$ such that 
 
 $$f(x) = f_{avg} = f(c) \cdot (b-a)$$
 
 
-\subsection{Day 30}
-\subsubsection{Area of Shape} Let $S$ be a solid that lies between $x=a$ and $x=b$. If the cross-sectional area of $S$ in the plane $P_x$, through $x$ and perpendicular to the $x$-axis, is $A(x)$, where $A$ is a continuous function, then the volume of $S$ is 
+\section{Area of Shape} Let $S$ be a solid that lies between $x=a$ and $x=b$. If the cross-sectional area of $S$ in the plane $P_x$, through $x$ and perpendicular to the $x$-axis, is $A(x)$, where $A$ is a continuous function, then the volume of $S$ is 
 
 $$V=\lim_{n \to \infty} \sum_{i=1}^{n} A(x_i^*) \Delta x = \int_a^b A(x) dx$$
 
-\subsubsection{Volume}
+\subsection{Volume}
 
 $$V=\int_a^b A(x) dx$$
 
-\subsubsection{Disk}
+\subsection{Disk}
 
 $$A(x) = \pi \cdot r^2 \text{ if rotating about $x$-axis}$$
 
-\subsubsection{Cross-Section (washer)}
+\subsection{Cross-Section (washer)}
 
 $$A(x) = \pi \cdot (R^2 - r^2)  \text{ if rotating about $x$-axis}$$
 
-\subsubsection{Cylinder}
+\subsection{Cylinder}
 
 $$A(x) = 2\pi x \cdot f(x) \cdot dx \text{ if rotating about $y$-axis}$$
 
+
+\section{Integration by Parts}
+$$\int f \cdot g'~dx = f \cdot g - \int g \cdot f'~dx$$
+$$\int f~dg = f \cdot g - \int g~df$$
+
+\begin{itemize}
+    \item  Make $f$ something that results in the most simple equation when derived.
+    \item \href{https://youtu.be/2I-_SV8cwsw}{DI Method is very quick and easy}
+
+\end{itemize}
+
+\section{Partial Fraction Decomposition (PFD)}
+$$\includegraphics[scale=.4]{media/pfd-table.jpg}$$
+
+
+\section{Trig Sub}
+
+$$\includegraphics[scale=.6]{media/trigsub.JPG}$$
+
+
+\section{Improper Integrals}
+
+$$\int_a^\infty f(x)~dx = \lim_{B\to\infty} \int_a^B f(x) ~dx$$
+
+\begin{itemize}
+    \item If the limit exists, it converges
+    \item If the limit doesn't exist, it diverges
+\end{itemize}
+
+\noindent e.g. $$\int \frac{1}{x^P} ~dx$$ \noindent if $P \leq 1$, the integral diverges
+
+
+\section{Separable Differential Equations}
+
+\begin{enumerate}
+    \item Put all $y$'s on one side and all $x$'s on the other.
+    \item Integrate both sides (don't forget $+c$!)
+    \item If possible, solve for $y$.
+    \item Apply initial conditions (if given.)
+    \item Verify the solution.
+\end{enumerate}
+
+
+
+\textbf{Note:} Make sure $dy$ and $dx$ are in numerators!
+
+\section{First-Order Linear Differential Equations}
+
+$$\frac{dy}{dx} + P(x) \cdot y = Q(x)$$
+
+\begin{enumerate}
+    \item Find the integrating factor:
+    $$e^{\int P(x)~dx}$$
+    \item Multiply both sides by the integrating factor
+    \item Recognize LHS as product rule
+    \item Integrate both sides
+    \item Solve for $y$
+    \item Verify Solution
+
+\end{enumerate}
+
+\section{Taylor Series}
+
+$$e^x = \sum_{n=0}^\infty \frac{x^n}{n!} = 1 + x + \frac{x^1}{2}+ \frac{x^2}{6}+ ...$$
+
+$$\frac{1}{1-x} = \sum_{n=0}^\infty x^n = 1+x+x^2+x^3 ...$$
 
 \end{document}
